Kubernetes/Task6/s_Task2/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /usr/share/nginx/html # Исправленная точка монтирования
      - name: multitool
        image: wbitt/network-multitool:latest # Пример образа
        ports:
        - containerPort: 8080
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: multitool
    port: 8080
    targetPort: 8080
